changes due to browsers incompabiity

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@1,200&display=swap');
+
 body{
     background-color: #E0E0E0;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    -webkit-font-smoothing: antialiased;
 }
 
 a, p{
     font-family: 'Libre Franklin', sans-serif;
+    font-style: italic;
+    font-weight: 200;
 }
 
 .links-div{
