added fade-in animation

--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,17 @@ a, p{
     left: -10%;
     transition: 0.25s ease-in;
 }
+
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 1.5s ease-in-out forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
