--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,15 @@ a, p{
     -webkit-animation: fadeIn 1.5s ease-in-out forwards; /* Safari 4.0 - 8.0 */
     animation: fadeIn 1.5s ease-in-out forwards;
 }
+
+@-webkit-keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+}
   
 @keyframes fadeIn {
     from {
